feat: doc for system
